crates/seatbelt/src/chaos/injection/snapshots/seatbelt__chaos__injection__layer__tests__new_needs_rate_and_output.snap
---
source: crates/seatbelt/src/chaos/injection/layer.rs
expression: layer
---
InjectionLayer {
    rate: None,
    injection_output: None,
    enable_if: Enabled,
    telemetry: TelemetryHelper {
        pipeline_name: "test_pipeline",
        strategy_name: "test_injection",
        event_reporter: None,
        logs_enabled: false,
    },
    rnd: Real,
    _state: PhantomData<fn(alloc::string::String, seatbelt::typestates::NotSet, seatbelt::typestates::NotSet) -> alloc::string::String>,
}
